# icy_engine

./: Cargo.toml  README.md
data/fonts/: Commodore_128_Lower_8x8.f8  Commodore_64_Lower_8x8.f8  Commodore_64_UPPER_8x8.f8  MicroKnight_Amiga_8x8.f8  mOsOul_Amiga_8x8.f8
doc/: ICEDFormat.md  IG218.TXT
doc/FileFormats/: ICEDFormat.md
i18n/de/: icy_engine.ftl
i18n/en/: icy_engine.ftl
src/: attributed_char.rs  buffer.rs  buffer_handling.rs  buffers.rs  caret.rs  crc.rs  dos_char.rs  fonts.rs  layer.rs  lib.rs  line.rs  palette_handling.rs  position.rs  sauce_handling.rs  selection.rs  selection_mask.rs  sixel.rs  sixel_mod.rs  terminal_state.rs  text_attribute.rs  undo_stack.rs  url_scanner.rs
src/editor/: area_operations.rs  edit_operations.rs  editor_error.rs  editor_operations.rs  font_operations.rs  layer_operations.rs  mod.rs  selection_operations.rs  undo_operations.rs  undo_stack.rs
src/formats/: ansi.rs  artworx.rs  ascii.rs  atascii.rs  avatar.rs  bin.rs  color_optimization.rs  ctrla.rs  ice_draw.rs  icy_draw.rs  mod.rs  mystic_draw.rs  pcboard.rs  renegade.rs  seq.rs  tundra.rs  xbinary.rs
src/paint/: half_block.rs  mod.rs
src/parser/: ansi_parser.rs  ascii_parser.rs  atascii_parser.rs  avatar_parser.rs  mod.rs  parser_errors.rs  pcboard_parser.rs  petscii_parser.rs  rip_parser.rs  viewdata_parser.rs
src/parser/tests/: ansi_parser_tests.rs  ascii_parser_tests.rs  buffer_operation_tests.rs  mod.rs  viewdata_parser_tests.rs
src/parsers/: ansi_parser.rs  ascii_parser.rs  atascii_parser.rs  avatar_parser.rs  lib.rs  mod.rs  parser_errors.rs  pcboard_parser.rs  petscii_parser.rs  rip_parser.rs  viewdata_parser.rs
src/parsers/ansi/: ansi_commands.rs  constants.rs  dcs.rs  mod.rs  osc.rs  (+3 more)
src/sauce/: mod.rs  sauce_errors.rs
src/sauce_mod/: mod.rs  sauce_errors.rs
src/tdf_font/: CODERBLU.TDF  mod.rs
src/util/: clipboard.rs  mod.rs
term/: a.out
(+30 files in other folders)
