[package]
name = "icy_engine"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
base64 = "0.21.2"
log = "0.4.20"
rfind_url = "0.4.4"
chrono = "0.4.19"
png = "0.17.10"

i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.2"
once_cell = "1.16.0"
arboard = "3.2.1"
