[package]
name = "icy_engine"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["clipboard", "minimal"]
clipboard = ["arboard"]
minimal = []

[dependencies]
lazy_static = "1.4.0"
base64 = "0.21.2"
log = "0.4.20"
rfind_url = "0.4.4"
chrono = "0.4.19"
png = "0.17.10"
icy_sixel = "0.1.1"
regex = "1.9.5"
thiserror = "1.0"
anyhow = "1.0.75"
serde = { version = "1", features = ["derive"] }
#raqote = "0.8.3"
raqote = { git = "https://github.com/mkrueger/raqote/" }

i18n-embed = { version = "0.14.0", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.7.0"
rust-embed = "8.0.0"
once_cell = "1.16.0"
arboard = { version = "3.2.1", optional = true }

[dev-dependencies]
walkdir = "2.3.2"
